[package]
name = "plygui-gtk"
version = "0.0.1"
authors = [ "Serhii Plyhun <snuk188@gmail.com>" ]
build = "build.rs"
edition = "2018"

[lib]
name = "plygui_gtk"
path = "src/lib.rs"

[dependencies]
plygui-api = {version = "0.0.1", path = "../plygui/api"}
gtk = { version = "^0.18", features = ["v3_24"] }
gdk = { version = "^0.18" }
glib = { version = "^0.18" }
glib-sys = { version = "^0.18" }
gobject-sys = { version = "^0.18" }
gtk-sys = { version = "^0.18" }
gdk-sys = { version = "^0.18" }
lazy_static = { version = "^1.0" }
libc = { version = "^0.2" }
pango = { version = "^0.18" }
gdk-pixbuf = { version = "^0.18" }
cairo-rs = { version = "^0.18"}
gio = { version = "^0.18"}

[build-dependencies]
cc = { version = "^1.0" }
heck = { version = "~0.3" }
pkg-config = { version = "^0.3" }

[features]
markup = ["plygui-api/markup"]
